[package]
name = "satellite-bitcoin-transactions"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arch_program = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
satellite-collections = { path = "../collections" }
satellite-math = { path = "../math" }
thiserror = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"], optional = true }
utoipa = { workspace = true, optional = true }
ordinals = { workspace = true, optional = true }
paste = "1"

[dev-dependencies]
serde_json = { workspace = true }
proptest = "1.5.0"

[features]
default = ["utxo-consolidation", "serde"]
runes = ["ordinals"]
utxo-consolidation = []
serde = ["dep:serde"]
utoipa = ["dep:utoipa"]
