[package]
name = "anchor-lang-idl-spec"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Anchor framework IDL spec"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
