[package]
name = "anchor-syn"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Anchor syntax parsing and code generation tools"
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = []
anchor-debug = []
event-cpi = []
hash = []
idl-build = ["dep:cargo_toml"]
init-if-needed = []
interface-instructions = []

[dependencies]
anyhow.workspace = true
bs58.workspace = true
heck.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
syn = { workspace = true, features = ["full", "extra-traits", "parsing"] }
thiserror.workspace = true

# `idl-build` feature only
cargo_toml = { workspace = true, optional = true }
