[package]
name = "anchor-syn"
version.workspace = true
repository.workspace = true
license.workspace = true
description = "Anchor syntax parsing and code generation tools"
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = []
anchor-debug = []
event-cpi = []
hash = []
idl-build = ["cargo_toml"]
init-if-needed = []

[dependencies]
anyhow = "1"
bs58 = "0.5"

# `idl-build` feature only
cargo_toml = { version = "0.19", optional = true }
heck = "0.3"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
syn = { version = "1", features = ["full", "extra-traits", "parsing"] }
thiserror = "1"
