[package]
name = "auction-house"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction_house"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
custom-heap = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { path = "../../lang" }
anchor-spl = { path = "../../spl" }
solana-sysvar = "3"
thiserror = "1.0"
arrayref = "0.3.6"

[dev-dependencies]
anyhow = "1.0.102"
borsh = "1.5.7"
litesvm = "0.9.1"
spl-token-interface = "2.0.0"

solana-account.workspace = true
solana-keypair.workspace = true
solana-transaction.workspace = true
solana-rpc-client.workspace = true
solana-pubkey.workspace = true
solana-sdk-ids.workspace = true
solana-system-interface.workspace = true
solana-loader-v3-interface.workspace = true
solana-program-pack.workspace = true
anchor-test-utils = { path = "../test-utils" }
mpl-token-metadata = "5.1.2-alpha.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
