[package]
name = "anchor-attribute-access-control"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Anchor attribute macro for instruction access control"
edition.workspace = true

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]

[dependencies]
anchor-syn = { path = "../../syn", version = "0.31.1" }
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
