[package]
name = "anchor-attribute-access-control"
version.workspace = true
repository.workspace = true
license.workspace = true
description = "Anchor attribute macro for instruction access control"
edition.workspace = true

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]

[dependencies]
anchor-syn = { path = "../../syn", version = "0.32.1" }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
