[package]
name = "anchor-attribute-account"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Anchor attribute macro for defining an account"
edition.workspace = true

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]
lazy-account = []

[dependencies]
anchor-syn = { path = "../../syn", version = "0.31.1", features = ["hash"] }
bs58.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
