[package]
name = "anchor-attribute-account"
version.workspace = true
repository.workspace = true
license.workspace = true
description = "Anchor attribute macro for defining an account"
edition.workspace = true

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]
lazy-account = []
event-cpi = []

[dependencies]
anchor-syn = { path = "../../syn", features = ["hash"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
