[package]
name = "anchor-attribute-accounts"
version = "0.32.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for accounts structs with compile-time mutability checking"
edition = "2021"

[lib]
proc-macro = true

[features]
allow-missing-optionals = ["anchor-syn/allow-missing-optionals"]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]
init-if-needed = ["anchor-syn/init-if-needed"]

[dependencies]
anchor-syn = { path = "../../syn", version = "0.32.1" }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "parsing"] }
