[package]
name = "anchor-attribute-constant"
version.workspace = true
repository.workspace = true
license.workspace = true
description = "Anchor attribute macro for creating constant types"
edition.workspace = true

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]

[dependencies]
anchor-syn = { path = "../../syn" }
quote = "1"
syn = { version = "1", features = ["full"] }
